--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="flush-headingOne">
                                 <a href="http://google.com" class="href-itd"></a>
-                                <button href="#" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                <button href="./secondPage.html" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                     История районов
                                 </btton>
                               </h2>
