--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                         <div class="accordion accordion-flush d-none" id="accordionFlushExample">
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="flush-headingOne">
-                                <a href="http://google.com" class="href-itd"></a>
-                                <button href="./secondPage.html" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                <a href="./secondPage.html" class="href-itd"></a>
+                                <button href="#" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                                     История районов
                                 </btton>
                               </h2>
