--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
             <!-- ------------------------------------------------------ -->
             <div class="myCarousel">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-touch="true" data-bs-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel carousel-1 slide" data-bs-touch="true" data-bs-ride="carousel">
 
                     <div class="d-flex justify-content-center align-items-center">
 
@@ -320,15 +320,15 @@
                             <img src="img/prev.png" class="carousel-icon-itd" alt="">
                         </div>
 
-                        <div class="carousel-inner">
+                        <div class="carousel-inner carousel-inner-1">
                             <div class="carousel-item active">
-                                <img src="img/forSlider.jpg" class="d-block w-100" alt="...">
+                                <img src="img/forSlider.jpg" class="carousel-img-1 d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/forSlider.jpg" class="d-block w-100" alt="...">
+                                <img src="img/forSlider.jpg" class="carousel-img-1 d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/forSlider.jpg" class="d-block w-100" alt="...">
+                                <img src="img/forSlider.jpg" class="carousel-img-1 d-block w-100" alt="...">
                             </div>
                             </div>
 
@@ -338,7 +338,7 @@
                         
                     </div>
 
-                    <div class="carousel-indicators">
+                    <div class="carousel-indicators carousel-indicators-1">
                         <button id="bullets" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button id="bullets" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button id="bullets" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -355,7 +355,7 @@
 </section>
 <!-- Head Button Slider -->
         <!-- Cards -->
-<section class="sect-itd"  id="scrollspyCards">
+<section class="sect-itd sect-for-cards-1-itd"  id="scrollspyCards">
     <div class="container">
 
         <div class="row pb-2">
