--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="stylesheet" href="css/style.css">
 
     <title>Document</title>
@@ -301,120 +301,13 @@
     </div>
 </div>
 <!-- ofCanvas -->
-        <div class="container">
-    <div class="row">
-        <div class="col">
-            <nav aria-label="breadcrumb bread-crumb-itd">
-                <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
-                <li class="breadcrumb-item active" aria-current="page">История районов</a></li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-</div>
-    
-        <section class="section-wihout-padding-top-itd">
+        <section>
     <div class="container">
-        <div class="row pb-2">
-            <h2>История районов</h2>
-        </div>
         <div class="row">
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="./thirdPage.html">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="./404.html">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
-            </div>
-            <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
-                <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
-                        <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
-                        </div>
-                        <div class="card-text-itd card-text-2-itd">
-                            Район
-                        </div>
-                    </a>					
-                </div>
+            <div class="col d-flex flex-column justify-content-center align-items-center">
+                <p class="head-404-itd">404</p>
+                <p class="body-404-itd">Запрашиваемая вами страница не найдена :(</p>
+                <p class="body-404-itd">Перейти на <a href="./index.html" class="href-404-itd">главную</a></p>
             </div>
         </div>
     </div>
