--- a/thirdPage.html
+++ b/thirdPage.html
@@ -313,8 +313,8 @@
             <nav aria-label="breadcrumb bread-crumb-itd">
                 <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
-                <li class="breadcrumb-item"><a href="./secondPage.html">История районов</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Кировский район</a></li>
+                <li class="breadcrumb-item"><a href="./secondPage.html">Места культурного досуга</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Кинотеатр «Победа»</a></li>
                 </ol>
             </nav>
         </div>
@@ -382,10 +382,10 @@
                             <img src="img/forSlider2.jpg" class="carousel-img-2 d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item carousel-item-2">
-                            <img src="img/forSlider2.jpg" class="carousel-img-2 d-block w-100" alt="...">
+                            <img src="img/example2.jpg" class="carousel-img-2 d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item carousel-item-2">
-                            <img src="img/forSlider2.jpg" class="carousel-img-2 d-block w-100" alt="...">
+                            <img src="img/example3.jpg" class="carousel-img-2 d-block w-100" alt="...">
                           </div>
                         </div>
                         
