--- a/secondPage.html
+++ b/secondPage.html
@@ -313,7 +313,7 @@
             <nav aria-label="breadcrumb bread-crumb-itd">
                 <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.html">Главная</a></li>
-                <li class="breadcrumb-item active" aria-current="page">История районов</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Улицы и дома</a></li>
                 </ol>
             </nav>
         </div>
@@ -323,17 +323,17 @@
         <section class="section-wihout-padding-top-itd">
     <div class="container">
         <div class="row pb-2">
-            <h2>История районов</h2>
+            <h2>Улицы и дома</h2>
         </div>
         <div class="row">
             <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
                 <div class="card-main-itd card-main-2-itd">
                     <a href="./thirdPage.html">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/1.jpg" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Первомайска
                         </div>
                     </a>					
                 </div>
@@ -342,10 +342,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="./404.html">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/2.jpg" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Калинина
                         </div>
                     </a>					
                 </div>
@@ -354,10 +354,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/3.jpg" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Архитектурная
                         </div>
                     </a>					
                 </div>
@@ -366,10 +366,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/4.png" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Кольцевая
                         </div>
                     </a>					
                 </div>
@@ -378,10 +378,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/5.jpg" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Ферина
                         </div>
                     </a>					
                 </div>
@@ -390,10 +390,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/6.png" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Нежниская
                         </div>
                     </a>					
                 </div>
@@ -402,10 +402,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/7.png" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Кирова
                         </div>
                     </a>					
                 </div>
@@ -414,10 +414,10 @@
                 <div class="card-main-itd card-main-2-itd">
                     <a href="#">
                         <div class="card card-2">
-                            <img src="img/cards/1.png" class="card-img-top card-img-2-top" alt="...">
+                            <img src="img/cards2/8.png" class="card-img-top card-img-2-top" alt="...">
                         </div>
                         <div class="card-text-itd card-text-2-itd">
-                            Район
+                            Комрова
                         </div>
                     </a>					
                 </div>
