--- a/secondPage.html
+++ b/secondPage.html
@@ -352,7 +352,7 @@
             </div>
             <div class="col-md-6 col-xs-12 d-flex justify-content-center align-items-center">
                 <div class="card-main-itd card-main-2-itd">
-                    <a href="#">
+                    <a href="./politicsPage.html">
                         <div class="card card-2">
                             <img src="img/cards2/3.jpg" class="card-img-top card-img-2-top" alt="...">
                         </div>
