--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="shortcut icon" href="img/favicon.png">
+    
     <title>Document</title>
 </head>
 <body>
@@ -544,12 +546,12 @@
                 <div class="d-flex flex-column p-0">
                     <a class="footer-menu-itd" href="#">История районов</a>
                     <a class="footer-menu-itd" href="#">Улицы и дома</a>
-                    <a class="footer-menu-itd" href="#">Учебные заведения</a>
+                    <a class="footer-menu-itd footer-menu-buttom-punkt-itd" href="#">Учебные заведения</a>
                 </div>
                 <div class="d-flex flex-column cent-col-itd">
                     <a class="footer-menu-itd" href="#">Места культурного досуга</a>
                     <a class="footer-menu-itd" href="#">Религизные сооружения</a>
-                    <a class="footer-menu-itd" href="#">Промышленные предприятия</a>
+                    <a class="footer-menu-itd footer-menu-buttom-punkt-itd" href="#">Промышленные предприятия</a>
                 </div>
                 <div class="d-flex flex-column p-0">
                     <a class="footer-menu-itd" href="#">Экскурсии</a>
